@@ -18,8 +18,9 @@ import com.hedera.services.bdd.junit.TestBase;
 import com.hedera.services.bdd.spec.HapiApiSpec;
 import com.hedera.services.bdd.spec.props.JutilPropertySource;
 import java.io.File;
+import java.nio.file.Path;
 import java.time.Duration;
-import java.util.Collections;
+import java.util.Map;
 import java.util.concurrent.TimeoutException;
 import org.junit.jupiter.api.BeforeAll;
 import org.testcontainers.containers.Network;
@@ -45,7 +46,10 @@ public abstract class IntegrationTestBase extends TestBase {
             new HederaContainer(IMAGE, 0)
                     .withClasspathResourceMappingDir("network/config")
                     .withWorkspace(WORKSPACE)
-                    .withNetwork(NETWORK);
+                    .withNetwork(NETWORK)
+                    .withRecordStreamFolderBinding(
+                            WORKSPACE,
+                            Path.of("network", "itest", "data", "recordStreams").toString());
 
     /** Before any test runs, configure HapiApiSpec to use the Testcontainer we created */
     @BeforeAll
@@ -60,6 +64,6 @@ public abstract class IntegrationTestBase extends TestBase {
                 defaultProperties.get("tls"),
                 defaultProperties.get("txn.proto.structure"),
                 defaultProperties.get("node.selector"),
-                Collections.emptyMap());
+                Map.of("recordStream.path", NODE_0.getRecordPath()));
     }
 }
